[gd_scene load_steps=5 format=2]

[ext_resource path="res://TD/main.gd" type="Script" id=1]
[ext_resource path="res://TD/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://TD/sprites/tower_placement_tileset.png" type="Texture" id=3]

[sub_resource type="TileSet" id=1]
0/name = "tower_placement_tileset.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tower_placement_tileset.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="tilemap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_quadrant_size = 1
format = 1
tile_data = PoolIntArray( 3, 3, 0, 5, 536870918, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 536870913, 0, 65539, 3, 0, 65551, 536870915, 0, 131075, 7, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 8, 0, 131087, 536870915, 0, 196611, 1, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 6, 0, 196623, 536870915, 0, 262147, 3, 0, 262159, 536870915, 0, 327683, 3, 0, 327685, 536870920, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 5, 0, 327690, 5, 0, 327691, 5, 0, 327692, 5, 0, 327693, 5, 0, 327694, 5, 0, 327695, 536870919, 0, 393219, 3, 0, 393221, 536870918, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 536870913, 0, 458755, 3, 0, 458767, 536870915, 0, 524291, 7, 0, 524292, 5, 0, 524293, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 8, 0, 524303, 536870915, 0 )

[node name="nav" type="Navigation2D" parent="."]

[node name="tilemap_nav" type="TileMap" parent="nav"]
tile_set = ExtResource( 2 )
cell_quadrant_size = 1
format = 1
tile_data = PoolIntArray( 4, 9, 0, 65540, 9, 0, 65541, 9, 0, 65542, 9, 0, 65543, 9, 0, 65544, 9, 0, 65545, 9, 0, 65546, 9, 0, 65547, 9, 0, 65548, 9, 0, 65549, 9, 0, 65550, 9, 0, 131086, 9, 0, 196622, 9, 0, 262148, 9, 0, 262149, 9, 0, 262150, 9, 0, 262151, 9, 0, 262152, 9, 0, 262153, 9, 0, 262154, 9, 0, 262155, 9, 0, 262156, 9, 0, 262157, 9, 0, 262158, 9, 0, 327684, 9, 0, 393220, 9, 0, 458756, 9, 0, 458757, 9, 0, 458758, 9, 0, 458759, 9, 0, 458760, 9, 0, 458761, 9, 0, 458762, 9, 0, 458763, 9, 0, 458764, 9, 0, 458765, 9, 0, 458766, 9, 0, 524302, 9, 0 )

[node name="start_position" type="Position2D" parent="."]
position = Vector2( 288, 0 )

[node name="end_position" type="Position2D" parent="."]
position = Vector2( 928, 576 )

[node name="mob_spawn_timer" type="Timer" parent="."]
one_shot = true

[node name="entities" type="YSort" parent="."]

[node name="user_interface" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="user_interface"]
margin_right = 192.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="user_interface"]
margin_top = 32.0
margin_right = 96.0
margin_bottom = 48.0
rect_scale = Vector2( 2, 2 )
text = "Level: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="points" type="Label" parent="user_interface"]
margin_top = 96.0
margin_right = 64.0
margin_bottom = 128.0
rect_scale = Vector2( 3, 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lives" type="Label" parent="user_interface"]
margin_top = 192.0
margin_right = 96.0
margin_bottom = 208.0
rect_scale = Vector2( 2, 2 )
text = "Lives: 100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gold" type="Label" parent="user_interface"]
margin_top = 256.0
margin_right = 96.0
margin_bottom = 272.0
rect_scale = Vector2( 2, 2 )
text = "Gold: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tower" type="Button" parent="user_interface"]
margin_left = 64.0
margin_top = 320.0
margin_right = 128.0
margin_bottom = 384.0
text = "Tower"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_wave" type="Label" parent="user_interface"]
margin_left = 32.0
margin_top = 448.0
margin_right = 105.0
margin_bottom = 462.0
text = "Next Wave:"

[node name="next_wave_time" type="Label" parent="user_interface"]
margin_left = 32.0
margin_top = 480.0
margin_right = 96.0
margin_bottom = 496.0
rect_scale = Vector2( 2, 2 )
text = "00"
align = 1
valign = 1

[node name="start_next_wave" type="Button" parent="user_interface"]
margin_left = 32.0
margin_top = 512.0
margin_right = 160.0
margin_bottom = 544.0
text = "Start Next Wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tower_placement" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_quadrant_size = 1
format = 1

[connection signal="timeout" from="mob_spawn_timer" to="." method="_on_mob_spawn_timer_timeout"]
[connection signal="pressed" from="user_interface/tower" to="." method="_on_tower_pressed"]
[connection signal="pressed" from="user_interface/start_next_wave" to="." method="_on_start_next_wave_pressed"]
